--- a/Otherpages/Hobbies.html
+++ b/Otherpages/Hobbies.html
@@ -2,6 +2,17 @@
 
 <ol>
   <li>Programming</li>
-<li>Fishing</li>
-<li>Gaming</li>
+  <img src="../Pictures/Programming.png" height="300" width="450" alt="Picture of programming">
+  <hr />
+  <li>Fishing</li>
+  <img src="../Pictures/Fishing.jpg" height="300" alt="Picture of a fisher" />
+  <hr />
+  <li>Gaming</li>
+  <img src="../Pictures/Gaming.webp" height="300" width="450" alt="Picture of gaming setup" />
+  <hr />
+  <li>Travelling</li>
+  <img src="../Pictures/Travelling.jpg" height="300" width="450" alt="Picture of Travelling" />
+  <hr />
 </ol>
+
+<footer>©Bogdan. All Rights Reserved.</footer>
