--- a/Otherpages/Hobbies.html
+++ b/Otherpages/Hobbies.html
@@ -1,4 +1,12 @@
-<h1>My Hobies</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <h1>My Hobies</h1>
 
 <ol>
   <li>Programming</li>
@@ -16,3 +24,8 @@
 </ol>
 
 <footer>©Bogdan. All Rights Reserved.</footer>
+</body>
+</html>
+
+
+
